--- a/submissions/kyle-jeremy/index.html
+++ b/submissions/kyle-jeremy/index.html
@@ -94,6 +94,7 @@
       /* TODO: The Article.fetchAll() method call now requires a callback.
           What 'view' method do we want to run on this index.html page? */
       // Article.fetchAll(); // Pass in the correct view method here.
+      Article.fetchAll(articleView.initIndexPage)
     </script>
   </body>
 </html>
