--- a/submissions/kyle-jeremy/admin.html
+++ b/submissions/kyle-jeremy/admin.html
@@ -57,6 +57,7 @@
     /* TODO: The Article.fetchAll() method call now requires a callback.
         What 'view' method do we want to run on this index.html page? */
     // Article.fetchAll(); // Pass in the correct view method here.
+    Article.fetchAll(articleView.initAdminPage)
     </script>
   </body>
 </html>
